objects/Wallet__c/Wallet__c.object-meta.xml
<CustomObject>
    <label>Endereço</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endereços</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>