objects/Wallet__c/fields/coin_icon__c.field-meta.xml
<CustomField>
    <fullName>coin_icon__c</fullName>
    <formula>Moeda__r.icon__c

/*
HYPERLINK(&quot;/lightning/r/Coin__c/&quot; &amp; Moeda__c &amp; &quot;/view&quot;, Moeda__r.icon__c)
*/</formula>
    <label>Icone</label>
    <type>Text</type>
</CustomField>