objects/Wallet__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereço</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>