objects/Wallet__c/fields/Icone_Sigla__c.field-meta.xml
<CustomField>
    <fullName>Icone_Sigla__c</fullName>
    <formula>Moeda__r.Icone_Sigla__c

/*
HYPERLINK(&quot;/lightning/r/Coin__c/&quot; &amp; Moeda__c &amp; &quot;/view&quot;, Moeda__r.Icone_Sigla__c)
*/</formula>
    <label>Icone | Sigla</label>
    <type>Text</type>
</CustomField>