objects/Wallet__c/fields/Icone_Sigla_Nome__c.field-meta.xml
<CustomField>
    <fullName>Icone_Sigla_Nome__c</fullName>
    <formula>Moeda__r.Icone_Sigla_Nome__c

/*
HYPERLINK(&quot;/lightning/r/Coin__c/&quot; &amp; Moeda__c &amp; &quot;/view&quot;, Moeda__r.Icone_Sigla_Nome__c)
*/</formula>
    <label>Icone | Sigla | Nome</label>
    <type>Text</type>
</CustomField>