objects/Wallet__c/fields/Moeda__c.field-meta.xml
<CustomField>
    <fullName>Moeda__c</fullName>
    <label>Moeda</label>
    <referenceTo>Coin__c</referenceTo>
    <relationshipLabel>Endereços (Moeda)</relationshipLabel>
    <relationshipName>Endere_os</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>