objects/Wallet__c/fields/qtd__c.field-meta.xml
<CustomField>
    <fullName>qtd__c</fullName>
    <label>Quantidade</label>
    <precision>18</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>