objects/Wallet__c/fields/URL_exchange__c.field-meta.xml
<CustomField>
    <fullName>URL_exchange__c</fullName>
    <label>URL exchange</label>
    <type>Url</type>
</CustomField>