objects/Wallet__c/fields/URL_Moeda__c.field-meta.xml
<CustomField>
    <fullName>URL_Moeda__c</fullName>
    <formula>Moeda__r.Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website da Moeda</label>
    <type>Text</type>
</CustomField>