objects/Wallet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Moeda__c</columns>
    <columns>Icone_Nome__c</columns>
    <columns>NAME</columns>
    <columns>Valor__c</columns>
    <columns>qtd__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>